--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <h2 class="musicas-titulo">Musiquinhas para meu marido 🎵</h2>
         <div class="musicas">
             <audio controls>
-                <source src="musicas/golden_hour.mp3" type="audio/mpeg">
+                <source src="golden_hour.mp3" type="audio/mpeg">
             </audio>
             <audio controls>
-                <source src="musicas/as_the_world_caves_in.mp3" type="audio/mpeg">
+                <source src="as_the_world_caves_in.mp3" type="audio/mpeg">
             </audio>
         </div>
 
