--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Bruno</title>
     <link rel="stylesheet" href="estilo.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
     <div class="intro" onclick="startSite()">
         <h1>~eternity~</h1>
     </div>
 
     <div class="main-content hidden">
-        <div class="hearts" id="hearts"></div>
-
         <div class="texto">
             <p>BODEAAA MINHA VIDAAA hihihi</p>
-            <p>Hoje é o dia mais especial do ano...</p>
-            <p>BODEAAA MINHA VIDAAA hihihi Hoje e o dia mais especial do ano...</p>
+            <p>Hoje é o dia mais especial do ano... BODEAAA MINHA VIDAAA hihihi
+
+Hoje e o dia mais especial do ano, o dia em que você nasceu, por te encontrar sinto que gastei toda a minha sorte na eternidade, e realmente incrível como você veio e mudou minha vida de uma forma, eu nunca havia sentido nada igual, os dias ao seu lado se tornaram os melhores da minha vida, pra falar a verdade, acho que em todas as vidas, nunca tive dias como esse, nascer nesse mundo valeu a pena, mesmo com todo o mal existente, ter você comigo, ao meu lado, como meu marido e o bastante para que eu vivesse tudo de novo quantas vezes fosse necessário, que você tenha muita saúde vida, muita felicidade, e que os sonhos que temos juntos se realize!! Em breve estarei junto a ti, lhe acordarei com um café na cama e um beijo, farei com que em seus dias não exista solidão e nem tristezas, e caso haja, estarei ao seu lado te apoiando e cuidando, você nunca mais estará sozinho, além de sua esposa, sou sua melhor amiga, sua mão direita, e sua aliada, para o que der e vier, seja na felicidade, na tristeza, na doença, na saúde, na riqueza, na pobreza, passarei tudo ao seu lado, jamais soltarei sua mão, minha vida ta ficando velhinho kkkkkks jaja a gente pisca e estamos daqui 70 anos na varanda de nossa casinha, comemorando seu aniversario ^^
+
+Mas olha, eu realmente não tenho uma vida mais sem você, em nenhum momento sequer me arrependo de ter aberto meu coração para você, me arrependo de ter ficado receosa, queria ter aproveitado muito mais o inicio, eu sinto sua falta, você faz muita falta quando não esta, nesse ano q se passou eu so tive mais certeza, que e com você que eu quero passar a eternidade, e a você que eu confio meu destino, meu coração e minha alma, e em você que repousarei todas as noites, e em seus braços que irei me encontrar nos dias, você e o homem que eu escolhi passar a existência, e um amor que eu nunca senti antes, obrigada por vir a existir nesse mundo comigo, e obrigada por me escolher também, eu já errei bastante nessa vida, mas no momento em que me entreguei de corpo e alma, eu prometi a mim mesma melhorar, eu vou tentar ser a melhor esposa que você poderia desejar, você merece, não há ningueeeeeem como você.. e isso meu velhinho que amo muito kkkks Te amo mais que tudo, e amo te amar <<33</p>
         </div>
 
         <h2 class="fotos-titulo">Fotos lindas 📸</h2>
-        <div class="galeria" id="galeria">
-            <!-- As imagens serão carregadas aqui pelo JS -->
-        </div>
+        <div class="galeria" id="galeria"></div>
 
-        <!-- Modal para exibir a imagem maior -->
-        <div id="modal" class="modal">
-            <span class="close" onclick="fecharModal()">&times;</span>
-            <img class="modal-content" id="imgModal">
-        </div>
+        <div class="ps" onclick="explodirCoracoes()">PS: Te amo muitão 💌</div>
+    </div>
 
-        <div class="ps" onclick="explodirCoracoes()">PS: Te amo muitão 💌<br>ASS: Isabeli</div>
+    <!-- Modal -->
+    <div id="modal" class="modal">
+        <span class="close" onclick="fecharModal()">&times;</span>
+        <img class="modal-content" id="imgModal">
     </div>
 
     <script src="script.js"></script>
