--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="intro" onclick="startSite()">
-        <h1>~eternity~</h1>
-    </div>
+    <div class="intro">
+    <h1>~eternity~</h1>
+</div>
+
 
     <div class="main-content hidden">
         <div class="hearts" id="hearts"></div>
