--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@ Mas olha, eu realmente não tenho uma vida mais sem você, em nenhum momento seq
         <div class="ps" onclick="explodirCoracoes()">PS: Te amo muitão 💌<br>ASS: Isabeli</div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        document.querySelector('.intro').addEventListener('click', startSite);
+    });
+</script>
+<script src="script.js"></script>
+
 </body>
 </html>
