--- a/index.html
+++ b/index.html
@@ -1,83 +1,121 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Para Bruno</title>
-    <link rel="stylesheet" href="estilo.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Feliz Aniversário, Meu Amor</title>
+  <style>
+    body {
+      font-family: 'Courier New', Courier, monospace;
+      background-color: #fff0f5;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #e91e63;
+    }
+
+    .button-container {
+      margin: 20px 0;
+    }
+
+    button {
+      background-color: #e91e63;
+      color: white;
+      border: none;
+      padding: 15px 25px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin: 10px;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #c2185b;
+    }
+
+    .main-content {
+      max-width: 700px;
+      margin: 0 auto;
+      text-align: left;
+      line-height: 1.6;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    #fotos img {
+      max-width: 100%;
+      height: auto;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    @media (max-width: 600px) {
+      button {
+        width: 90%;
+        font-size: 18px;
+      }
+
+      body {
+        padding: 10px;
+      }
+
+      .main-content {
+        text-align: justify;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="intro">
-    <h1>~eternity~</h1>
-</div>
+  <h1>Feliz Aniversário, Meu Amor 💖</h1>
 
+  <div class="button-container">
+    <button onclick="mostrarMensagem()">Ver mensagem</button>
+    <button onclick="mostrarFotos()">Ver fotos</button>
+  </div>
 
-    <div class="main-content hidden">
-        <div class="hearts" id="hearts"></div>
+  <div class="main-content hidden">
+    <p>BODEAAA MINHA VIDAAA hihihi</p>
 
-        <div class="texto">
-            <p>BODEAAA MINHA VIDAAA hihihi</p>
-            <p>Hoje é o dia mais especial do ano...</p>
-            <p>BODEAAA MINHA VIDAAA hihihi
+    <p>
+      Hoje e o dia mais especial do ano, o dia em que você nasceu, por te encontrar sinto que gastei toda a minha sorte na eternidade, e realmente incrível como você veio e mudou minha vida de uma forma, eu nunca havia sentido nada igual, os dias ao seu lado se tornaram os melhores da minha vida, pra falar a verdade, acho que em todas as vidas, nunca tive dias como esse, nascer nesse mundo valeu a pena, mesmo com todo o mal existente, ter você comigo, ao meu lado, como meu marido e o bastante para que eu vivesse tudo de novo quantas vezes fosse necessário, que você tenha muita saúde vida, muita felicidade, e que os sonhos que temos juntos se realize!! Em breve estarei junto a ti, lhe acordarei com um café na cama e um beijo, farei com que em seus dias não exista solidão e nem tristezas, e caso haja, estarei ao seu lado te apoiando e cuidando, você nunca mais estará sozinho, além de sua esposa, sou sua melhor amiga, sua mão direita, e sua aliada, para o que der e vier, seja na felicidade, na tristeza, na doença, na saúde, na riqueza, na pobreza, passarei tudo ao seu lado, jamais soltarei sua mão, minha vida ta ficando velhinho kkkkkks jaja a gente pisca e estamos daqui 70 anos na varanda de nossa casinha, comemorando seu aniversario ^^
+    </p>
 
-Hoje e o dia mais especial do ano, o dia em que você nasceu, por te encontrar sinto que gastei toda a minha sorte na eternidade, e realmente incrível como você veio e mudou minha vida de uma forma, eu nunca havia sentido nada igual, os dias ao seu lado se tornaram os melhores da minha vida, pra falar a verdade, acho que em todas as vidas, nunca tive dias como esse, nascer nesse mundo valeu a pena, mesmo com todo o mal existente, ter você comigo, ao meu lado, como meu marido e o bastante para que eu vivesse tudo de novo quantas vezes fosse necessário, que você tenha muita saúde vida, muita felicidade, e que os sonhos que temos juntos se realize!! Em breve estarei junto a ti, lhe acordarei com um café na cama e um beijo, farei com que em seus dias não exista solidão e nem tristezas, e caso haja, estarei ao seu lado te apoiando e cuidando, você nunca mais estará sozinho, além de sua esposa, sou sua melhor amiga, sua mão direita, e sua aliada, para o que der e vier, seja na felicidade, na tristeza, na doença, na saúde, na riqueza, na pobreza, passarei tudo ao seu lado, jamais soltarei sua mão, minha vida ta ficando velhinho kkkkkks jaja a gente pisca e estamos daqui 70 anos na varanda de nossa casinha, comemorando seu aniversario ^^
+    <p>
+      Mas olha, eu realmente não tenho uma vida mais sem você, em nenhum momento sequer me arrependo de ter aberto meu coração para você, me arrependo de ter ficado receosa, queria ter aproveitado muito mais o inicio, eu sinto sua falta, você faz muita falta quando não esta, nesse ano q se passou eu so tive mais certeza, que e com você que eu quero passar a eternidade, e a você que eu confio meu destino, meu coração e minha alma, e em você que repousarei todas as noites, e em seus braços que irei me encontrar nos dias, você e o homem que eu escolhi passar a existência, e um amor que eu nunca senti antes, obrigada por vir a existir nesse mundo comigo, e obrigada por me escolher também, eu já errei bastante nessa vida, mas no momento em que me entreguei de corpo e alma, eu prometi a mim mesma melhorar, eu vou tentar ser a melhor esposa que você poderia desejar, você merece, não há ningueeeeeeeeeeeeeeeeemmmmmmmmmmmmmmmm como você.. e isso meu velhinho que amo muito kkkks Te amo mais que tudo, e amo te amar <<33
+    </p>
 
-Mas olha, eu realmente não tenho uma vida mais sem você, em nenhum momento sequer me arrependo de ter aberto meu coração para você, me arrependo de ter ficado receosa, queria ter aproveitado muito mais o inicio, eu sinto sua falta, você faz muita falta quando não esta, nesse ano q se passou eu so tive mais certeza, que e com você que eu quero passar a eternidade, e a você que eu confio meu destino, meu coração e minha alma, e em você que repousarei todas as noites, e em seus braços que irei me encontrar nos dias, você e o homem que eu escolhi passar a existência, e um amor que eu nunca senti antes, obrigada por vir a existir nesse mundo comigo, e obrigada por me escolher também, eu já errei bastante nessa vida, mas no momento em que me entreguei de corpo e alma, eu prometi a mim mesma melhorar, eu vou tentar ser a melhor esposa que você poderia desejar, você merece, não há ningueemmm como você.. e isso meu velhinho que amo muito kkkks Te amo mais que tudo, e amo te amar <<33</p>
-        </div>
+    <p><strong>PS:</strong> Te amo mais que tudo<br>
+      <strong>ASS:</strong> Isabeli, sua esposa</p>
 
-        <h2 class="fotos-titulo">Fotos lindas 📸</h2>
-        <div class="galeria">
-    <img src="fotos/IMG-20240324-WA0001.jpg" alt="Foto 1">
-    <img src="fotos/IMG-20240517-WA0004.jpg" alt="Foto 2">
-    <img src="fotos/IMG-20250418_231621.jpg" alt="Foto 3">
-    <img src="fotos/IMG-20240601-WA0007.jpg" alt="Foto 4">
-    <img src="fotos/IMG-20240607-WA0035.jpg" alt="Foto 5">
-    <img src="fotos/IMG-20240611-WA0023.jpg" alt="Foto 6">
-    <img src="fotos/IMG-20240628-WA0017.jpg" alt="Foto 7">
-    <img src="fotos/IMG-20240810-WA0060.jpg" alt="Foto 8">
-    <img src="fotos/IMG-20241015-WA0009.jpg" alt="Foto 9">
-    <img src="fotos/IMG-20241019-WA0003.jpg" alt="Foto 10">
-    <img src="fotos/IMG-20241020-WA0011.jpg" alt="Foto 11">
-    <img src="fotos/IMG-20241202-WA0013.jpg" alt="Foto 12">
-    <img src="fotos/IMG_20250418_230449.jpg" alt="Foto 13">
-    <img src="fotos/IMG_20250418_230547.jpg" alt="Foto 14">
-</div>
-
-<!-- Modal para exibir a imagem maior -->
-<div id="modal" class="modal">
-    <span class="close" onclick="fecharModal()">&times;</span>
-    <img class="modal-content" id="imgModal">
-</div>
-
-<script>
-    // Abertura da imagem ao clicar
-    const imagens = document.querySelectorAll('.galeria img');
-    const modal = document.getElementById('modal');
-    const imgModal = document.getElementById('imgModal');
-
-    imagens.forEach(imagem => {
-        imagem.addEventListener('click', (e) => {
-            modal.style.display = 'block';
-            imgModal.src = e.target.src;
-        });
-    });
-
-    // Função para fechar o modal
-    function fecharModal() {
-        modal.style.display = 'none';
-    }
-</script>
-
-
-        <div class="ps" onclick="explodirCoracoes()">PS: Te amo muitão 💌<br>ASS: Isabeli</div>
+    <div id="fotos" class="hidden">
+      <img src="foto1.jpg" alt="Foto 1">
+      <img src="foto2.jpg" alt="Foto 2">
+      <!-- Adicione mais imagens se quiser -->
     </div>
+  </div>
 
-    <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        document.querySelector('.intro').addEventListener('click', startSite);
-    });
-</script>
-<script src="script.js"></script>
+  <script>
+    function mostrarMensagem() {
+      const content = document.querySelector('.main-content');
+      content.classList.remove('hidden');
+      window.scrollTo({ top: content.offsetTop, behavior: 'smooth' });
+    }
 
+    function mostrarFotos() {
+      const fotos = document.getElementById('fotos');
+      fotos.classList.toggle('hidden');
+      if (!fotos.classList.contains('hidden')) {
+        fotos.scrollIntoView({ behavior: 'smooth' });
+      }
+    }
+  </script>
 </body>
 </html>
