--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Mas olha, eu realmente não tenho uma vida mais sem você, em nenhum momento seq
 </script>
 
 
-        <div class="ps" onclick="explodirCoracoes()">PS: Te amo muitão 💌<br>ASS: Isabeli</div>
+        <div class="ps" onclick="explodirCoracoes()">PS: Te amo muitão s2<br>ASS: Isabeli sua esposa</div>
     </div>
 
     <script src="script.js"></script>
